# streamlit_dash

./: .gitignore  README.md  Requirements.txt  app.py  pyproject.toml
.streamlit/: config.toml
notebooks/: Prueba notebook.ipynb
notebooks/.streamlit/: secrets.toml
